@@ -3,6 +3,7 @@ Git
 - Added an option to the Settings menu to lock the interface.
 - Combined reload and stop scan buttons.
 - Added a 'minimal' UI that can be enabled by hiding the main toolbar.
+- Added option to hide the statusbar.
 - It's now possible to set a root directory in the directory tree.
 
 1.7
